--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,8 +58,8 @@ dependencies:
   slider_button:
   flutter_cool_card_swiper:
   fl_chart:
-  firebase_core:
-  cloud_firestore:
+  firebase_core: ^3.0.0
+  cloud_firestore: ^5.0.0
   flutter_cache_manager: ^3.3.1
 
 dev_dependencies:
