--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   firebase_core: ^3.0.0
   cloud_firestore: ^5.0.0
   flutter_cache_manager: ^3.3.1
+  cherry_toast:
+
 
 dev_dependencies:
   flutter_test:
