--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,27 +22,68 @@
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>rental</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>rental</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSApplicationQueriesSchemes</key>
-    	<array>
-    		<string>uaepassstg</string>
-    		<string>uaepassdev</string>
-    		<string>uaepassqa</string>
-    		<string>uaepass</string>
-    	</array>
+	<array>
+		<string>uaepassstg</string>
+		<string>uaepassdev</string>
+		<string>uaepassqa</string>
+		<string>uaepass</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>mediaLibrary</string>
+	<key>NSCameraUsageDescription</key>
+	<string>camera</string>
+	<key>NSContactsUsageDescription</key>
+	<string>contacts</string>
+	<key>NSDocumentsFolderUsageDescription</key>
+	<string>storage</string>
+	<key>NSDownloadsFolderUsageDescription</key>
+	<string>App wants to access your downloads folder</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>we need location</string>
+	<string>locationAlways</string>
+	<key>NSLocationUsageDescription</key>
+	<string>location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>we need location</string>
+	<string>locationWhenInUse</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>microphone</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>photosAddOnly</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>photos</string>
+	<key>NSRemindersUsageDescription</key>
+	<string>reminders</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>speech</string>
+	<key>PermissionGroupNotification</key>
+	<string>notification</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>processing</string>
 	</array>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -61,53 +102,11 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>com.apple.developer.associated-domains</key>
-    	<array>
-    		<string>applinks:rak://com.ba3.rak</string>
-    		<string>rak://com.ba3.rak</string>
-    	</array>
-    	<key>NSCameraUsageDescription</key>
-        <string>Can I use the camera please?</string>
-        <key>NSPhotoLibraryUsageDescription</key>
-        <string>Used to demonstrate image picker plugin</string>
-          <key>NSPhotoLibraryAddUsageDescription</key>
-          <string>We need access to add photos to your library.</string>
-             <key>CADisableMinimumFrameDurationOnPhone</key>
-              <true/>
-              <key>UIApplicationSupportsIndirectInputEvents</key>
-              <true/>
-              <key>NSDocumentsFolderUsageDescription</key>
-              <string>storage</string>
-              <key>NSDownloadsFolderUsageDescription</key>
-              <string>App wants to access your downloads folder</string>
-              <key>LSSupportsOpeningDocumentsInPlace</key>
-              <true/>
-              <key>UIFileSharingEnabled</key>
-              <true/>
-              <key>NSRemindersUsageDescription</key>
-              <string>reminders</string>
-              <key>NSContactsUsageDescription</key>
-              <string>contacts</string>
-              <key>NSCameraUsageDescription</key>
-              <string>camera</string>
-              <key>NSMicrophoneUsageDescription</key>
-              <string>microphone</string>
-              <key>NSSpeechRecognitionUsageDescription</key>
-              <string>speech</string>
-              <key>NSPhotoLibraryUsageDescription</key>
-              <string>photos</string>
-              <key>NSPhotoLibraryAddUsageDescription</key>
-              <string>photosAddOnly</string>
-              <key>NSLocationUsageDescription</key>
-              <string>location</string>
-              <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-              <string>locationAlways</string>
-              <key>NSLocationWhenInUseUsageDescription</key>
-              <string>locationWhenInUse</string>
-              <key>PermissionGroupNotification</key>
-              <string>notification</string>
-              <key>NSAppleMusicUsageDescription</key>
-              <string>mediaLibrary</string>
-              <key>kTCCServiceMedia</key>
-              <string>mediaLibrary</string>
+	<array>
+		<string>applinks:rak://com.ba3.rak</string>
+		<string>rak://com.ba3.rak</string>
+	</array>
+	<key>kTCCServiceMedia</key>
+	<string>mediaLibrary</string>
 </dict>
 </plist>
