--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,8 +63,8 @@ dependencies:
   flutter_cache_manager: ^3.3.1
   cherry_toast:
   video_player:
-  firebase_storage: ^12.0.1
-  image_picker: ^1.1.2
+  firebase_storage:
+  image_picker:
 
 
 
